fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -316,6 +316,7 @@ a.showmore:hover {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
+    width:100%;
 }
 
 .lodgingcard {
